--- a/angular-src/src/app/components/forms/add-post-form/add-post-form.component.html
+++ b/angular-src/src/app/components/forms/add-post-form/add-post-form.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="categories && categories.length" class="container mb-5">
+<div *ngIf="categories" class="container mb-5">
   <div class="row justify-content-center">
     <div class="col-lg-12">
       <app-message *ngIf="typeMessage && postMessage" [type]="typeMessage" [message]="postMessage"></app-message>
