--- a/angular-src/src/app/components/forms/login-form/login-form.component.html
+++ b/angular-src/src/app/components/forms/login-form/login-form.component.html
@@ -9,7 +9,8 @@
         <app-message *ngIf="messageForm && typeMessage" [type]="typeMessage" [message]="messageForm"></app-message>
         <div class="form-group">
           <label>Username</label>
-          <input type="text" formControlName="username" [ngClass]="getStatus('username')" class="form-control" placeholder="Username">
+          <input type="text" formControlName="username" [ngClass]="getStatus('username')" class="form-control" placeholder="Username"
+            autofocus>
           <app-error-form [control]="loginForm.controls['username']"></app-error-form>
         </div>
         <div class="form-group">
