More post function

--- a/angular-src/src/app/components/admin/add-category/add-category.component.html
+++ b/angular-src/src/app/components/admin/add-category/add-category.component.html
@@ -1,2 +1,2 @@
 <app-page-header [icon]="'plus'" [header]="'Add Category'"></app-page-header>
-<app-add-category-form></app-add-category-form>
+<app-category-form></app-category-form>
