--- a/angular-src/src/app/components/admin/add-post/add-post.component.html
+++ b/angular-src/src/app/components/admin/add-post/add-post.component.html
@@ -1,2 +1,2 @@
 <app-page-header [icon]="'plus'" [header]="'Add Post'"></app-page-header>
-<app-add-post-form></app-add-post-form>
+<app-post-form></app-post-form>
