--- a/angular-src/src/app/components/admin/edit-categories/edit-categories.component.html
+++ b/angular-src/src/app/components/admin/edit-categories/edit-categories.component.html
@@ -1,1 +1,2 @@
 <app-page-header [icon]="'pencil'" [header]="'Edit Categories'"></app-page-header>
+<app-categories-table [categories]="categories"></app-categories-table>
