--- a/angular-src/src/app/components/tables/categories-table/categories-table.component.html
+++ b/angular-src/src/app/components/tables/categories-table/categories-table.component.html
@@ -9,6 +9,7 @@
             <th>Posts</th>
             <th>Created Date</th>
             <th>Last Update</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -18,6 +19,7 @@
             <td><span class="badge badge-primary">{{ category.posts.length }}</span></td>
             <td>{{ category.createdDate | date:'short' }}</td>
             <td>{{ category.updatedDate | date:'short' }}</td>
+            <td><button class="btn btn-warning text-light" (click)="openModal(editCategory, category)"><i class="fa fa-pencil"></i></button></td>
           </tr>
         </tbody>
       </table>
@@ -25,6 +27,17 @@
     <ng-template #noCategories>
       <div class="col-lg-12">
         <app-message [type]="'warning'" [message]="'There are no categories right now'"></app-message>
+      </div>
+    </ng-template>
+    <ng-template #editCategory>
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">Edit Post</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <app-category-form [editCategory]="selectedCategory"></app-category-form>
       </div>
     </ng-template>
   </div>
