--- a/angular-src/src/app/components/blog/blog.component.html
+++ b/angular-src/src/app/components/blog/blog.component.html
@@ -1,3 +1,4 @@
-<app-header></app-header>
-<app-body></app-body>
-<app-footer></app-footer>
+<div id="mainBlog">
+  <app-blog-header></app-blog-header>
+  <router-outlet></router-outlet>
+</div>
