Added new features with blog categories and post details

--- a/angular-src/src/app/components/blog/blog-header/blog-header.component.html
+++ b/angular-src/src/app/components/blog/blog-header/blog-header.component.html
@@ -1,8 +1,8 @@
 <div class="topnav clearfix">
   <div class="container">
-    <a href="#">Home</a>
-    <a href="#">Posts</a>
-    <a href="#">Categories</a>
+    <a routerLink="/">Home</a>
+    <a routerLink="/posts">Posts</a>
+    <a routerLink="/categories">Categories</a>
     <div class="search-container">
       <form>
         <input type="text" placeholder="Search" name="search">
