--- a/angular-src/src/app/components/admin/admin-home/admin-home.component.html
+++ b/angular-src/src/app/components/admin/admin-home/admin-home.component.html
@@ -1,6 +1,10 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
-    <div class="col-lg-12">
+    <div class="col-lg-12 mb-5">
+      <app-admin-blog-chart [overallData]="overallData"></app-admin-blog-chart>
+    </div>
+    <div class="col-lg-12 mb-5">
+      <app-admin-categories-chart [categoriesHighest]="categoriesHighest"></app-admin-categories-chart>
     </div>
   </div>
 </div>
