--- a/angular-src/src/app/components/forms/category-form/category-form.component.html
+++ b/angular-src/src/app/components/forms/category-form/category-form.component.html
@@ -5,7 +5,8 @@
       <form [formGroup]="categoryForm" (ngSubmit)="setCategoryForm()" autocomplete="off" novalidate>
         <div class="form-group">
           <label>Category Name</label>
-          <input type="text" class="form-control" placeholder="Category Name" formControlName="name">
+          <input type="text" class="form-control" [ngClass]="getStatus('name')" placeholder="Category Name" formControlName="name">
+          <app-error-form [control]="getControl('name')"></app-error-form>
         </div>
         <div class="form-group">
           <label for="file">Category Image</label>
