--- a/angular-src/src/app/components/tables/posts-table/posts-table.component.html
+++ b/angular-src/src/app/components/tables/posts-table/posts-table.component.html
@@ -6,6 +6,7 @@
           <tr>
             <th>Title</th>
             <th>Slug</th>
+            <th>Image</th>
             <th>Author</th>
             <th>Category</th>
             <th>Publish</th>
@@ -20,6 +21,7 @@
           <tr *ngFor="let post of posts">
             <td>{{ post.title | ucwords }}</td>
             <td>{{ post.slug }}</td>
+            <td><app-picture [src]="post.coverImage" [width]="100" [height]="50"></app-picture></td>
             <td>{{ post.author | ucwords }}</td>
             <td>{{ post.category.name | ucwords }}</td>
             <td>
