--- a/angular-src/src/app/components/blog/picture/picture.component.html
+++ b/angular-src/src/app/components/blog/picture/picture.component.html
@@ -1,1 +1,1 @@
-<img [src]="path + '/' + src" [width]="width" [height]="height">
+<img appDefaultImage [src]="path + '/' + src" [width]="width" [height]="height">
