--- a/angular-src/src/app/components/forms/category-form/category-form.component.html
+++ b/angular-src/src/app/components/forms/category-form/category-form.component.html
@@ -1,6 +1,7 @@
 <div class="container mb-5">
   <div class="row justify-content-center">
     <div class="col-lg-12">
+      <app-loading [loading]="loading" [background]="'white'"></app-loading>
       <app-message *ngIf="typeMessage && categoryMessage" [type]="typeMessage" [message]="categoryMessage"></app-message>
       <form [formGroup]="categoryForm" (ngSubmit)="setCategoryForm()" autocomplete="off" novalidate>
         <div class="form-group">
