--- a/angular-src/src/app/components/forms/post-form/post-form.component.html
+++ b/angular-src/src/app/components/forms/post-form/post-form.component.html
@@ -1,6 +1,7 @@
 <div class="container mb-5">
   <div *ngIf="categories" class="row justify-content-center">
     <div *ngIf="categories && categories.length; else noCategories" class="col-lg-12">
+      <app-loading [loading]="loading" [background]="'white'"></app-loading>
       <app-message *ngIf="typeMessage && postMessage" [type]="typeMessage" [message]="postMessage"></app-message>
       <form [formGroup]="postForm" (ngSubmit)="setPostForm()" autocomplete="off" novalidate>
         <div class="row">
