--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -96,6 +96,34 @@ a {
   outline: none;
 }
 
+.dropdown-mobile {
+  display: none;
+  margin: 0;
+  list-style-type: none;
+  padding: 0;
+  background: #e7e7e7;
+}
+
+.dropdown-mobile li span {
+  color: #fff;
+  background: #12A0F8;
+  outline: none;
+  border: none;
+  padding: 15px;
+  cursor: pointer;
+  display: inline-block;
+  margin: 10px 5px;
+  border: 3px solid #fff;
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out;
+}
+
+.dropdown-mobile li span:hover {
+  color: #12A0F8;
+  background: #fff;
+  border: 3px solid #12A0F8;
+}
+
 /* Post */
 
 .main-post-details img {
@@ -300,21 +328,51 @@ a {
 
 /* Media */
 
-@media screen and (max-width: 600px) {
-  .topnav .search-container {
-    float: none;
+@media screen and (max-width: 991px) {
+  .btn-post {
+    width: 100%;
+    bottom: 0;
+    position: relative;
+    display: block;
+    right: 0;
+    margin-top: 1.5rem;
   }
-  .topnav a,
-  .topnav input[type="text"],
-  .topnav .search-container button {
+}
+
+@media screen and (max-width: 767px) {
+  .topnav a {
     float: none;
     display: block;
     text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
   }
+
+  .topnav .container {
+    margin: 0;
+    padding: 0;
+  }
+
+  .topnav .search-container {
+    float: none;
+  }
+
   .topnav input[type="text"] {
-    border: 1px solid #ccc;
+    margin-bottom: 1rem;
+    margin-left: 16px;
+  }
+
+  .topnav .search-container button {
+    float: none;
+  }
+
+  .dropdown-mobile {
+    display: block;
+  }
+
+  .nav-mobile-block {
+    display: block;
+  }
+
+  .nav-mobile-none {
+    display: none;
   }
 }
